fix: chart z-index

--- a/src/pages/SmartWeaveExplorer/Contracts/Contracts.scss
+++ b/src/pages/SmartWeaveExplorer/Contracts/Contracts.scss
@@ -104,7 +104,6 @@
   margin-left: -12px;
   position: relative;
   overflow: hidden;
-  z-index: 1000;
 
   @media (min-width: breakpoint-min(lg)) {
     width: 80%;
